# litestar-test-task

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: asgi.py  config.py  models.py  repository.py  routes.py  schemas.py  service.py
migrations/: env.py
tests/: conftest.py  test_model.py  test_routes.py  test_schemas.py
